[package]
name = "container-networking"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
futures = "0.3.31"
ipnetwork = "0.20.0"
mnl = "0.2.2"
nftnl = "0.7.0"
nix = { version = "0.29.0", features = ["sched"] }
rtnetlink = "0.14.1"
tokio = { version = "1.40.0", features = ["full"] }
